src/objects/Business_at_Risk__c.object
<CustomObject>
    <description>This object will contain information to help manage business at risk.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Loss_Date__c</fullName>
        <inlineHelpText>If Assets were to leave, this is the expected redemption date</inlineHelpText>
        <label>Potential Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment</label>
        <referenceTo>Account__c</referenceTo>
        <relationshipLabel>Business at Risk</relationshipLabel>
        <relationshipName>Business_at_Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business at Risk</relationshipLabel>
        <relationshipName>Business_at_Risk</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percentage_at_Risk__c</fullName>
        <inlineHelpText>Probability of losing the business
High - 75 - 100%
Medium - 50 - 74.99%
Low - 25 - 49.99%
Redeeming - 0 - 24.99%</inlineHelpText>
        <label>Probability of Loss</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeeming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_at_Risk__c</fullName>
        <inlineHelpText>This will contain the reason the business is at risk.</inlineHelpText>
        <label>Reason at Risk</label>
        <picklist>
            <picklistValues>
                <fullName>De-risking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House Management/ OCIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Client Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Restructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebalance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_at_Risk_Date__c</fullName>
        <label>Relationship at Risk Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_at_Risk__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This checkbox will display whether or not a relationship is at risk.</inlineHelpText>
        <label>Relationship at Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_AUM_AUD__c</fullName>
        <label>Total AUM AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AUM_CAD__c</fullName>
        <label>Total AUM CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AUM_EUR__c</fullName>
        <label>Total AUM EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AUM_GBP__c</fullName>
        <label>Total AUM GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AUM_JPY__c</fullName>
        <label>Total AUM JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AUM_SGD__c</fullName>
        <label>Total AUM SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AUM_USD__c</fullName>
        <label>Total AUM USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business at Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Expected_Loss_Date__c</columns>
        <columns>Percentage_at_Risk__c</columns>
        <columns>Reason_at_Risk__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Business at Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business at Risk</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>